<resources>
    <string name="app_name">CodeAssist</string>
	<string name="create_new_project">Create new project</string>
	<string name="git_clone_repo">Clone git repository</string>
	<string name="open_existing_project">Open existing project</string>
	<string name="project_manager">Project manager</string>
	<string name="import_project">Import project</string>
	<string name="configure_settings">Configure settings</string>
	<string name="choose_project">Choose project</string>
  	<string name="title_confirm_project_close">Close project</string>
	<string name="msg_confirm_project_close">Are you sure you want to close this project?</string>
    <string name="text_title">Title</string>
    <string name="text_description">Description</string>
    <string name="text_button">Button</string>
    <string name="okay">Okay</string>
    <string name="importing_project">Importing Project...</string>
    <string name="preparing_for_import">Preparing for Import...</string>
    <string name="project_imported_successfully">Project imported successfully</string>
    <string name="import_success">Import Success</string>
    <string name="import_failed">Import Failed</string>
    <string name="project_import_cancelled">Project import cancelled</string>
    <string name="imported">Imported</string>
    <string name="project_already_exists">Project: %1$s already exists</string>
    <string name="exporting_project">Exporting Project...</string>
    <string name="close">Close</string>
    <string name="exporting">Exporting</string>
    <string name="project_exported_successfully">Project exported successfully</string>
    <string name="export_success">Export Success</string>
    <string name="export_failed">Export Failed</string>
    <string name="add_new_library">Add new libray</string>
	<string name="new_library">New libray</string>
	<string name="project_properties">Project properties</string>
	<string name="variants">Variants</string>
	<string name="build_variants">Build variants</string>
	<string name="switched_to_variant">Switched to build variant</string>
	<string name="create">Create</string>
	<string name="name">Name</string>
	<string name="package_name">Package name</string>
	<string name="java_library">Java library</string>
	<string name="android_library">Android library</string>
    <string name="hello_world">Hello world!</string>
 	<string name="settings_project_title">Project</string>
	<string name="settings_project_desc">Configure project</string>
    <string name="project_title">Custom Project</string>
    <string name="open_custom_project_title">Open Custom Project</string>
    <string name="open_custom_project_desc">If enabled you will be able to open project from diffrent locations, By switching this the Project Manager will be hidden</string>
	<string name="welcome_message">Welcome to CodeAssist</string>
    <string name="add">Add</string>
    <string name="added_successfully">Added successfully</string>
    <string name="extract_icons">Extract icons</string>
    <string name="extract">Extract</string>
    <string name="confirm_extract">Do you want to extract all icons from CodeAssist?</string>
    <string name="extracting_icons">Extracting icons</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="wizard_next">Next</string>
    <string name="wizard_finish">Finish</string>
    <string name="wizard_cancel">Cancel</string>
    <string name="wizard_templates">Templates</string>
    <string name="wizard_exit">Exit</string>
    <string name="wizard_desc">Select from Activity templates</string>
    <string name="wizard_empty_templates">Templates are empty :(</string>
    <string name="wizard_loading">Loading templates</string>
    <string name="wizard_app_name">App name</string>
    <string name="wizard_package_name">com.my.myapplication</string>
    <string name="wizard_save_location">Save location</string>
    <string name="wizard_language">Language</string>
    <string name="wizard_minimum_sdk">Minimum SDK</string>
    <string name="wizard_create">Create</string>
    <string name="wizard_previous">Previous</string>
    <string name="wizard_scoped_storage_info">Due to Android 11 storage restrictions, you can only save files on the app\'s internal storage.</string>
    <string name="wizard_file_not_writable">Directory is not writable, select another location</string>
    <string name="wizard_path_exceeds">Location path exceeds 240 characters.</string>
    <string name="wizard_package_illegal">Package name contains illegal characters.</string>
    <string name="wizard_package_too_short">Package name is too short.</string>
    <string name="wizard_package_contains_spaces">Package name cannot contain spaces.</string>
    <string name="wizard_error_name_empty">Name cannot be empty.</string>
    <string name="wizard_error_name_illegal">Name cannot contain illegal characters</string>
    <string name="wizard_package_empty">Package name cannot be empty.</string>
    <string name="wizard_select_min_sdk">Select a minimum SDK version.</string>
    <string name="wizard_select_save_location">Select a save location</string>
    <string name="menu_open_project">Open module</string>
    <string name="menu_create_project">Create module</string>
    <string name="menu_run">Run</string>
    <string name="menu_refresh">Refresh module</string>
    <string name="menu_library_manager">Library manager</string>
    <string name="menu_drawable_manager">Drawable manager</string>
    <string name="menu_icon_manager">Icon manager</string>
    <string name="menu_format">Format</string>
    <string name="menu_settings">Settings</string>
    <string name="settings_title_appearance">Appearance</string>
    <string name="settings_desc_appearance">Appearance and Language</string>
    <string name="settings_title_editor">Editor</string>
    <string name="settings_desc_editor">Configure the editor</string>
    <string name="title_activity_settings">Settings</string>
    <string name="settings_theme_title">Theme</string>
    <string name="settings_theme_desc">Choose a theme for the IDE</string>
    <string name="settings_theme_value_default">System default</string>
    <string name="settings_theme_value_light">Light</string>
    <string name="settings_theme_value_dark">Dark</string>
    <string-array name="theme_values">
        <item>default</item>
        <item>light</item>
        <item>dark</item>
    </string-array>
    <string-array name="theme_entries">
        <item>@string/settings_theme_value_default</item>
        <item>@string/settings_theme_value_light</item>
        <item>@string/settings_theme_value_dark</item>
    </string-array>
    <string name="settings_dynamic_title">Material You</string>
    <string name="settings_dynamic_desc">generates custom UI themes from your wallpapers (requires reboot)</string>
    <string name="code_engine_title">Completion Engine</string>
    <string name="settings_code_completions">Enable code completions</string>
    <string name="settings_kotlin_completions">Enable code completions for Kotlin</string>
    <string name="settings_kotlin_completions_desc">This feature is still experimental and may be slow.
        Requires a powerful device.
    </string>
    <string name="settings_case_insensitive_match_title">Case insensitive match</string>
    <string name="settings_case_insensitive_match_desc">Suggest class names with lowercase prefix.</string>
    <string name="code_editor_error_highlight">Enable error highlighting</string>
    <string name="editor_settings_title">Code Editor settings</string>
    <string name="editor_settings_wordwrap">Word wrap mode</string>
    <string name="editor_delete_whitespaces">Auto delete whitespace</string>
    <string name="save">Save</string>
    <string name="defaultString">Default</string>
    <string name="editor_scheme_title">Editor color scheme</string>
    <string name="editor_scheme_desc">Change the color scheme</string>
    <string name="change_scheme_dialog_title">Paste the path of theme file</string>
	<string name="set_scheme_file_path">Set scheme file path</string>
    <string name="font_size_title">Font size</string>
    <string name="font_size_message">Set editor font size</string>
    <string name="font_size_summary">Specify the default font size of the editor</string>
    <string name="keyboard_settings_title">Keyboard</string>
    <string name="keyboard_enable_suggestions_description">Enable keyboard suggestions</string>
    <string name="settings_build_run_title">Build &amp; Run</string>
    <string name="settings_build_run_desc">Configure build and execution settings</string>
    <string name="run_title">Run</string>
    <string name="settings_install_apk_title">APK Installation Prompt</string>
    <string name="settings_install_desc">Show APK installation prompt after successful compilation.</string>
    <string-array name="java_versions" translatable="false">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
    </string-array>
    <string name="completion_settings_kotlin_title">Kotlin</string>
    <string name="completion_settings_java_title">Java</string>
    <string name="completion_java_target_version_title">Target version</string>
    <string name="completion_java_source_version_title">Source version</string>
    <string name="editor_tabs_settings_title">Editor Tabs</string>
    <string name="editor_tab_unique_file_name">Show directory for non-unique file names</string>
    <string name="editor_tab_unique_file_name_summary">Makes displayed file names unique by showing parent folders if files with identical file names are opened.</string>
    <string name="settings_about_us_title">About Us</string>
    <string name="settings_about_us_desc">More info about the developers.</string>
    <string name="app_description">Powerful and lightweight IDE for Android app development right within your pocket.</string>
    <string name="app_version">Version</string>
    <string name="contact_group_title">Contact</string>
    <string name="app_source_title">Source code</string>
    <string name="sketchub_team">Sketchub Team</string>
    <string name="community">Community</string>
    <string name="rate_us">Rate us</string>
	<string name="settings_git_title">Git Source Control</string>
	<string name="settings_git_desc">Configure the Git Source Control</string>
	<string name="git_title">Git</string>
	<string name="git_user_name_title">User Name</string>
	<string name="git_user_desc">Full name (recorded with commits)</string>
	<string name="enter_full_name">Enter full name</string>
	<string name="git_user_email_title">User Email</string>
	<string name="git_email_desc">Email (recorded with commits)</string>
	<string name="enter_email">Enter email</string>
    <string name="install">Install</string>
    <string name="error">Error</string>
    <string name="error_resource_name_restriction">Resource names must only contain lowercase letters (a–z), digits (0–9), and underscores.</string>
    <string name="item_project">Project</string>
	<string name="open_project">Open project</string>
    <string name="dialog_create_class_title">Create a class</string>
    <string name="create_class_dialog_class_name">Class name</string>
    <string name="menu_preview_layout">Preview Layout</string>
</resources>