<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        app:fragment="com.tyron.code.ui.settings.ApplicationSettingsFragment"
        android:icon="@drawable/ic_appearance"
        app:summary="@string/settings_desc_appearance"
        app:title="@string/settings_title_appearance" />

    <Preference
        app:fragment="com.tyron.code.ui.settings.EditorSettingsFragment"
        android:icon="@drawable/ic_code"
        app:summary="@string/settings_desc_editor"
        app:title="@string/settings_title_editor" />

    <Preference
        app:fragment="com.tyron.code.ui.settings.ProjectSettingsFragment"
        android:icon="@drawable/ic_open_folder"
        app:summary="@string/settings_project_desc"
        app:title="@string/settings_project_title" />

    <Preference
        app:fragment="com.tyron.code.ui.settings.BuildSettingsFragment"
        android:icon="@drawable/ic_build"
        app:summary="@string/settings_build_run_desc"
        app:title="@string/settings_build_run_title" />

	<Preference
        app:fragment="com.tyron.code.ui.settings.GitSettingsFragment"
        android:icon="@drawable/ic_github"
        app:summary="@string/settings_git_desc"
        app:title="@string/settings_git_title" />
	
    <Preference
        app:fragment="com.tyron.code.ui.settings.AboutUsFragment"
        android:icon="@drawable/ic_info_outline"
        app:title="@string/settings_about_us_title"
        app:summary="@string/settings_about_us_desc"/>
</PreferenceScreen>