<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ListPreference
        app:title="@string/settings_theme_title"
        app:summary="@string/settings_theme_desc"
        app:defaultValue="default"
        app:key="theme"
        app:entryValues="@array/theme_values"
        app:entries="@array/theme_entries"
        app:iconSpaceReserved="false"
        />
     <SwitchPreferenceCompat
            app:title="@string/settings_dynamic_title"
            app:summary="@string/settings_dynamic_desc"
            android:defaultValue="true"
            android:iconSpaceReserved="false"
            android:key="dynamic"
            app:iconSpaceReserved="false"/>
</PreferenceScreen>